<resources>
    <string name="app_name">Разработчик ПРОДИМЕКС</string>
    <string name="app_name_bold"><b>Цифровой диспетчер «ПРОДИМЕКС»</b></string>
    <string name="app_loader_sub_name">Режим погрузчика</string>
    <string name="authorization">Авторизация</string>
    <string name="enter_farm_index">Введите индекс хозяйства</string>
    <string name="add_new_driver">+ ВОДИТЕЛЬ</string>
    <string name="loader_page_error">Индекс хозяйтва должен содержать\nот 3 до 5 символов.</string>
    <string name="start_scan">СТАРТ</string>
    <string name="stop_scan">СТОП</string>
    <string name="connect_to_loader">ПОДКЛЮЧИТЬСЯ</string>
    <string name="clear">ОЧИСТИТЬ</string>
    <string name="on">ВКЛ</string>
    <string name="off">ВЫКЛ</string>
    <string name="go_to_load">ЗАГРУЗИТЬ</string>
    <string name="disagree">ОТКАЗАТЬ</string>
    <string name="sample_alert_header"><b>Пример заголовка</b></string>
    <string name="sample_alert_body">Пожалуйста загрузите это обновление и установите его, что бы иметь доступ ко всем новым функциям.</string>
    <string name="remove">X</string>
    <string name="accept_connection">ЗАБЛОКИРОВАТЬ</string>
    <string name="preview_text">preview</string>
    <string name="chose_your_role">Тест связи по роли:</string>
    <string name="drivers_pages_layouts">Макеты страниц водителя:</string>
    <string name="test_modes">Тестовые режимы:</string>
    <string name="scanner">СКАНЕР</string>
    <string name="loader_pages_layouts">Макеты страниц погрузчика:</string>
    <string name="driver">ВОДИТЕЛЬ</string>
    <string name="profile">ПРОФИЛЬ</string>
    <string name="loading">ЗАГРУЖЕНО</string>
    <string name="trip">РЕЙС</string>
    <string name="canceled">ОТКАЗАНО</string>
    <string name="loader">ПОГРУЗЧИК</string>
    <string name="login_page">АВТОРИЗАЦИЯ</string>
    <string name="driver_mode">РЕЖИМ ВОДИТЕЛЯ</string>
    <string name="loader_mode">РЕЖИМ ПОГРУЗЧИКА</string>
    <string name="queue_page">ОЧЕРЕДЬ</string>
    <string name="enter">ВОЙТИ</string>
    <string name="get_password_button">ПОЛУЧИТЬ</string>
    <string name="logout">ВЫЙТИ</string>
    <string name="i_do_not_have_time">Я НЕ УСПЕВАЮ</string>
    <string name="cancel_trip">ОТМЕНИТЬ РЕЙС</string>
    <string name="before_start_press_go_to_line">Перед началом работы\nнажмите кнопку\n «ВЫЙТИ НА ЛИНИЮ»</string>
    <string name="to_loader_connection_tip">Подключаемся к погрузчику\nподождите.</string>
    <string name="connect_to_loader_button">ПОДКЛЮЧИТЬСЯ\nК ПОЗГУЗЧИКУ</string>
    <string name="disconnect_to_loader_button">ОТКЛЮЧИТЬСЯ\nОТ ПОЗГУЗЧИКА</string>
    <string name="go_to_line">ВЫЙТИ НА ЛИНИЮ</string>
    <string name="sample_alert">ХАК АЛЕРТ</string>
    <string name="set_current_trip_to_loaded">ХАК ЗАГРУЖЕН</string>
    <string name="set_current_trip_to_discarded">ХАК ОТКАЗАНО</string>
    <string name="cancel">ОТМЕНА</string>
    <string name="not_ready">НЕ ГОТОВ</string>
    <string name="ok">ОК</string>
    <string name="do_not_update">ОТЛОЖИТЬ</string>
    <string name="update_now">ОБНОВИТЬ</string>
    <string name="take_new_trip">ВЗЯТЬ РЕЙС</string>
    <string name="update_available"><b>ДОСТУПНО ОБНОВЛЕНИЕ</b></string>
    <string name="please_update_text">Пожалуйста загрузите это обновление и установите его, что бы иметь доступ ко всем новым функциям.</string>
    <string name="request_update_data">Загрузка данных\nобновления...</string>
    <string name="taking_driver_date">Получение данных\nводителя...</string>
    <string name="get_password_by_sms"><u>Получить пароль из СМС</u></string>
    <string name="get_password_by_sms_help">На указанный вами номер будет отправлено СМС с паролем для авторизации.</string>
    <string name="go_back_to_login"><u>Вернуться назад</u></string>
    <string name="exit_underline_text"><u>Изменить индекс хозяйства</u></string>
    <string name="change_loading_plan_underline_text"><u>Изменить план по загрузке</u></string>
    <string name="change_application_mode"><u>Изменить режим работы приложения</u></string>
    <string name="clear_cache"><u>Очистить кеш</u></string>
    <string name="drop_drivers"><u>Сбросить водителей</u></string>
    <string name="driver_block_info">#1 ФИО: Оолонг Оолонгович Джизус\nСтатус: непонятно</string>
    <string name="enter_phone_hint">Введите номер телефона</string>
    <string name="enter_password_hint">Введите пароль</string>
    <string name="surname_preview">Фамилия:</string>
    <string name="trip_is_complete">Рейс завершен.\nВы готовы взять новый рейс?</string>
    <string name="preloading">Загрузка...</string>
    <string name="name_preview">Имя:</string>
    <string name="patronymic_preview">Отчество:</string>
    <string name="phone_preview">Телефон: <b>+7 (985) 779-46-44</b></string>
    <string name="car_number_preview">Номер АМ: <b>E920КА 81</b></string>
    <string name="car_number_base_farm_index">Индекс хозяйства: <b>МДА</b></string>
    <string name="base_farm_preview">Базовое хозяйство:</string>
    <string name="base_farm_name_preview"><b>филиал «Медвенское агрообъединение» ООО«Курск-Агро»</b></string>
    <string name="load_preview"><b>10:00 - 10:30</b> вт., 11 октября</string>
    <string name="field_preview">Поле: <b>46КРС112</b></string>
    <string name="unload_place_preview"><b>Призаводской свеклопункт ЛБМ</b></string>
    <string name="load">Погрузка:</string>
    <string name="unload">Разгрузка:</string>
    <string name="unload_preview"><b>11:00 - 11:30</b> вт., 11 октября</string>

    <string name="random_header"><b>Insightful APK Analyzer</b></string>
    <string name="random_big_text">Find opportunities to optimize your Android app size by inspecting the contents of your app APK file or Android App Bundle. Inspect the manifest file, resources, and DEX files. Compare two APKs or Android App Bundles to see how your app size changed between app versions.</string>
</resources>