<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <TextView
        android:id="@+id/trip_page_trip_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="СТАТУС: ЗАГРУЖЕН"
        android:textSize="18dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/text_orange"
        />
    <TextView
        android:id="@+id/trip_page_base_farm_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/base_farm_name_preview"
        android:textSize="18dp"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textColor="@color/text_gray"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load"
        android:textSize="18dp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/text_gray"
        />
    <TextView
        android:id="@+id/loading_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_preview"
        android:textSize="18dp"
        android:textAlignment="center"
        android:textColor="@color/text_gray"
        />
    <TextView
        android:id="@+id/loading_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/field_preview"
        android:textSize="18dp"
        android:textAlignment="center"
        android:textColor="@color/text_gray"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unload"
        android:textSize="18dp"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:textColor="@color/text_gray"
        />
    <TextView
        android:id="@+id/unloading_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unload_preview"
        android:textSize="18dp"
        android:textAlignment="center"
        android:textColor="@color/text_gray"
        />
    <TextView
        android:id="@+id/unloading_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unload_place_preview"
        android:textSize="18dp"
        android:textAlignment="center"
        android:textColor="@color/text_gray"
        />
</LinearLayout>
