<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red_silver"
        android:orientation="vertical"
        android:padding="30dp">
        <TextView
            android:id="@+id/profile_page_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/surname_preview"
            android:layout_marginBottom="5dp"
            android:textColor="@color/text_gray"
            />
        <TextView
            android:id="@+id/profile_page_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/name_preview"
            android:layout_marginBottom="5dp"
            android:textColor="@color/text_gray"
            />
        <TextView
            android:id="@+id/profile_page_patronymic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patronymic_preview"
            android:textSize="18dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/text_gray"
            />
        <TextView
            android:id="@+id/profile_page_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_preview"
            android:textSize="18dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/text_gray"
            />
        <TextView
            android:id="@+id/profile_page_cars_numbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_number_preview"
            android:textSize="18dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/text_gray"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/base_farm_preview"
            android:textSize="18dp"
            android:layout_marginBottom="0dp"
            android:textColor="@color/text_gray"
            />
        <TextView
            android:id="@+id/profile_page_base_farm_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/base_farm_name_preview"
            android:textSize="18dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/text_gray"
            />
        <TextView
            android:id="@+id/profile_page_base_farm_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_number_preview"
            android:textSize="18dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/text_gray"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:gravity="center">
            <Button
                android:id="@+id/profile_page_exit"
                android:layout_width="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/logout"
                android:paddingHorizontal="40dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/driver_bottom"/>
    </RelativeLayout>
</RelativeLayout>