<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red_silver"
        android:orientation="vertical"
        android:gravity="top">
        <include layout="@layout/loader_top"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="35dp">
            <LinearLayout
                android:id="@+id/loader_list_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/random_header"
                    android:textSize="18dp"
                    android:textColor="@color/text_gray"/>
                <TextView
                    android:id="@+id/settings_debug_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/random_big_text"
                    android:layout_marginTop="10dp"
                    android:textSize="18dp"
                    android:textColor="@color/text_gray"/>
                <TextView
                    android:id="@+id/change_farm_index"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_url_blue"
                    android:text="@string/exit_underline_text"
                    android:layout_marginTop="15dp"
                    android:paddingVertical="7dp"
                    android:textSize="18dp"/>
                <TextView
                    android:id="@+id/change_loading_plan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_url_blue"
                    android:text="@string/change_loading_plan_underline_text"
                    android:paddingVertical="7dp"
                    android:textSize="18dp"/>
                <TextView
                    android:id="@+id/change_application_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_url_blue"
                    android:text="@string/change_application_mode"
                    android:paddingVertical="7dp"
                    android:textSize="18dp"/>
                <TextView
                    android:id="@+id/clear_cache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_url_blue"
                    android:text="@string/clear_cache"
                    android:paddingVertical="7dp"
                    android:textSize="18dp"/>
                <TextView
                    android:id="@+id/drop_drivers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_url_blue"
                    android:text="@string/drop_drivers"
                    android:paddingVertical="7dp"
                    android:textSize="18dp"/>
                <Button
                    android:id="@+id/add_beacon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:text="@string/add_beacon"
                    android:paddingHorizontal="30dp"
                    android:layout_marginTop="15dp"
                    />
                <Button
                    android:id="@+id/upload_logs"
                    android:layout_width="wrap_content"
                    android:background="@drawable/button_background"
                    android:text="@string/upload_logs"
                    android:paddingHorizontal="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:foregroundGravity="center_horizontal"
        android:layout_height="match_parent">

        <include layout="@layout/app_version"/>
    </RelativeLayout>
</RelativeLayout>