<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    android:padding="10dp"
    android:background="@color/gray"
    android:layout_marginBottom="100dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/driver_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/preview_text"/>
        <TextView
            android:id="@+id/driver_fio"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/preview_text"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        >
        <Button
            android:id="@+id/connect_button"
            android:layout_width="68dp"
            android:layout_height="48dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/button_background"
            android:text="@string/on"
            android:textColor="@color/white"
            android:layout_alignParentLeft="true"
            android:textSize="14sp" />
        <Button
            android:id="@+id/disconnect_button"
            android:layout_width="68dp"
            android:layout_height="48dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/button_background_red"
            android:text="@string/off"
            android:textColor="@color/white"
            android:layout_toRightOf="@id/connect_button"
            android:textSize="14sp" />

        <Button
            android:id="@+id/remove_driver_beacon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_background"
            android:text="@string/remove"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>
</LinearLayout>