<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red_silver"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/prodimex_logo" />

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/app_name_bold"
            android:textAlignment="center"
            android:textColor="@color/text_red"
            android:textSize="24dp" />

        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/app_loader_sub_name"
            android:textAlignment="center"
            android:textColor="@color/text_gray"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/farm_index_input_field"
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/enter_farm_index"
            android:inputType="textCapCharacters"
            android:maxLength="5"
            android:paddingVertical="10dp"
            android:textAlignment="center"
            android:textColor="@color/text_gray"
            android:textColorHint="@color/text_light_gray"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/error_field"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/loader_page_error"
            android:textAlignment="center"
            android:textColor="@color/text_red"
            android:textSize="16dp" />

        <Button
            android:id="@+id/loader_enter_page_enter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_background"
            android:paddingHorizontal="40dp"
            android:text="@string/enter" />

        <TextView
            android:id="@+id/error_field_index"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:textAlignment="center"
            android:textColor="@color/text_red"
            android:textSize="16dp" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:foregroundGravity="center_horizontal"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/app_version_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="Версия: 4.0.25-debug"
            android:textColor="@color/text_light_gray"
            android:textSize="12dp" />
    </RelativeLayout>
</RelativeLayout>