<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/alert_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/alert_background"
        android:gravity="center">
        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:background="@drawable/popup_background"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            >
            <TextView
                android:id="@+id/alert_header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/sample_alert_header"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="7dp"
                android:textSize="22dp"/>
            <TextView
                android:id="@+id/alert_body_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/sample_alert_body"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="7dp"
                android:textSize="18dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/ok_alert_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:text="@string/ok"
                    android:layout_marginTop="15dp"
                    android:paddingHorizontal="35dp"
                    />
                <Button
                    android:id="@+id/cancel_alert_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background_red"
                    android:text="@string/cancel"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:paddingHorizontal="20dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>