<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/get_password_by_sms_help"
        android:textAlignment="center"
        android:textColor="@color/text_gray_light"
        android:layout_marginTop="10dp"
        android:textSize="14dp"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/login_page_request_button"
            android:layout_width="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/get_password_button"
            android:paddingHorizontal="40dp"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/login_page_request_button_loader"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:elevation="2dp"
            app:srcCompat="@drawable/preloader" />
    </RelativeLayout>
    <TextView
        android:id="@+id/error_field"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textColor="@color/text_red"
        android:textSize="16dp"/>
    <TextView
        android:id="@+id/go_back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_url_blue"
        android:text="@string/go_back_to_login"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textSize="18dp"/>
</LinearLayout>